{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 49,
  "lineage": "fa74691d-fdca-5535-0526-cd6003a86fd9",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45ff54760196e04",
            "arn": "arn:aws:ec2:us-east-1:889474144721:elastic-ip/eipalloc-0b45ff54760196e04",
            "association_id": "eipassoc-052c2072b96ce0853",
            "domain": "vpc",
            "id": "eipalloc-0b45ff54760196e04",
            "network_border_group": "us-east-1",
            "network_interface": "eni-031208d35efeece67",
            "private_dns": "ip-10-0-1-170.ec2.internal",
            "private_ip": "10.0.1.170",
            "public_dns": "ec2-100-48-126-136.compute-1.amazonaws.com",
            "public_ip": "100.48.126.136",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-nat-eip",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-nat-eip",
              "Project": "clinicaltrials"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:internet-gateway/igw-00465501e685f5893",
            "id": "igw-00465501e685f5893",
            "owner_id": "889474144721",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-igw",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-igw",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b45ff54760196e04",
            "association_id": "eipassoc-052c2072b96ce0853",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0be6a1b587a904e9b",
            "network_interface_id": "eni-031208d35efeece67",
            "private_ip": "10.0.1.170",
            "public_ip": "100.48.126.136",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091e893bbde0efd21",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-nat-gw",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-nat-gw",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:route-table/rtb-08805441869e36aec",
            "id": "rtb-08805441869e36aec",
            "owner_id": "889474144721",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0be6a1b587a904e9b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-rt",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-rt",
              "Project": "clinicaltrials"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "rtb-08805441869e36aec",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:route-table/rtb-0dd331c8a9c519d1a",
            "id": "rtb-0dd331c8a9c519d1a",
            "owner_id": "889474144721",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00465501e685f5893",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-rt",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-rt",
              "Project": "clinicaltrials"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "rtb-0dd331c8a9c519d1a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020f6faad731f4ddf",
            "region": "us-east-1",
            "route_table_id": "rtb-08805441869e36aec",
            "subnet_id": "subnet-04c38c96d6b9739e0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2475df2228ee017",
            "region": "us-east-1",
            "route_table_id": "rtb-08805441869e36aec",
            "subnet_id": "subnet-087ceee3717c64a3a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.this",
            "module.network.aws_nat_gateway.this",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae7bd699c515a46f",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd331c8a9c519d1a",
            "subnet_id": "subnet-091e893bbde0efd21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a759d3a1cd3a059a",
            "region": "us-east-1",
            "route_table_id": "rtb-0dd331c8a9c519d1a",
            "subnet_id": "subnet-097b94ceb3002890f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apprunner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:security-group/sg-032dcb65c25e1f8f5",
            "description": "App Runner to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032dcb65c25e1f8f5",
            "ingress": [],
            "name": "clinicaltrials-dev-apprunner-sg",
            "name_prefix": "",
            "owner_id": "889474144721",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-apprunner-sg",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-apprunner-sg",
              "Project": "clinicaltrials"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "sg-032dcb65c25e1f8f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:security-group/sg-09997f6a2df63f8d4",
            "description": "Allow postgres from App Runner",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09997f6a2df63f8d4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-032dcb65c25e1f8f5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "clinicaltrials-dev-db-sg",
            "name_prefix": "",
            "owner_id": "889474144721",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-db-sg",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-db-sg",
              "Project": "clinicaltrials"
            },
            "timeouts": null,
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "sg-09997f6a2df63f8d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_security_group.apprunner",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:subnet/subnet-04c38c96d6b9739e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c38c96d6b9739e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889474144721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-1",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-1",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "subnet-04c38c96d6b9739e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:subnet/subnet-087ceee3717c64a3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087ceee3717c64a3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889474144721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-2",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-private-2",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "subnet-087ceee3717c64a3a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:subnet/subnet-091e893bbde0efd21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091e893bbde0efd21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "889474144721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-1",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-1",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "subnet-091e893bbde0efd21",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:subnet/subnet-097b94ceb3002890f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097b94ceb3002890f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "889474144721",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-2",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-public-2",
              "Project": "clinicaltrials"
            },
            "vpc_id": "vpc-07e31dc1c159952ca"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "subnet-097b94ceb3002890f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:889474144721:vpc/vpc-07e31dc1c159952ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c3eaa052ccdefe8e",
            "default_route_table_id": "rtb-03bc3b6398ac71cc0",
            "default_security_group_id": "sg-0238e4d1add3d0a30",
            "dhcp_options_id": "dopt-0477e6b694bd4fcfd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07e31dc1c159952ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bc3b6398ac71cc0",
            "owner_id": "889474144721",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-vpc",
              "Project": "clinicaltrials"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "clinicaltrials-dev-vpc",
              "Project": "clinicaltrials"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889474144721",
            "id": "vpc-07e31dc1c159952ca",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}